<resources>
    <string name="app_name">씨네마천국</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mike</string>
    <string name="nav_header_subtitle">003213@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">영화 목록</string>
    <string name="menu_api">영화 API</string>
    <string name="menu_book">예매하기</string>
    <string name="menu_settings">사용자 설정</string>

    <string name="sangse1_name">군도</string>
    <string name="sangse1_open">2014.07.23 개봉</string>
    <string name="sangse1_genre_time">액션 / 137 분</string>
    <string name="sangse2_name">공조</string>
    <string name="sangse2_open">2014.07.23 개봉</string>
    <string name="sangse2_genre_time">액션 / 137 분</string>
    <string name="sangse3_name">더킹</string>
    <string name="sangse3_open">2014.07.23 개봉</string>
    <string name="sangse3_genre_time">액션 / 137 분</string>
    <string name="sangse4_name">레지던트 이블</string>
    <string name="sangse4_open">2014.07.23 개봉</string>
    <string name="sangse4_genre_time">액션 / 137 분</string>
    <string name="sangse5_name">럭키</string>
    <string name="sangse5_open">2014.07.23 개봉</string>
    <string name="sangse5_genre_time">액션 / 137 분</string>
    <string name="sangse6_name">아수라</string>
    <string name="sangse6_open">2014.07.23 개봉</string>
    <string name="sangse6_genre_time">액션 / 137 분</string>
</resources>
