<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/thumbnail_base"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movieImage"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/movieName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sangse1_name"
                        android:textColor="@android:color/background_light"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/gradeImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_15" />

                </LinearLayout>

                <TextView
                    android:id="@+id/openDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/sangse1_open"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/genreTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/sangse1_genre_time"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp">

                    <!--좋아요-->

                    <Button
                        android:id="@+id/good"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_thumb_up" />


                    <TextView
                        android:id="@+id/goodNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:text="15"
                        android:textColor="#FFFFFF" />

                    <!--싫어요-->

                    <Button
                        android:id="@+id/bad"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/ic_thumb_down" />

                    <TextView
                        android:id="@+id/badNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:text="1"
                        android:textColor="#FFFFFF" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reservation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/box"
                    android:gravity="center"
                    android:lineSpacingExtra="10dp"
                    android:text="예매율\n5위 1.8%" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/box"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="평점" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/ratingBar"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:rating="4.1"
                            android:stepSize="0.1"/>


                        <TextView
                            android:id="@+id/ratingScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8.2" />
                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/viewers"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/box"
                    android:gravity="center"
                    android:lineSpacingExtra="10dp"
                    android:text="누적관객수\n839,399명" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/black_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="줄거리"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="군도, 백성을 구하라!\n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. 힘 없는 백성의 편이 되어
     세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다.\n\n쌍칼 도치 vs 백성의 적 조윤\n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이,
     나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈,
     삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는
     죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.\n\n뭉치면 백성, 흩어지면 도적!
     망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적,
     조윤과 한 판 승부를 시작하는데..." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/black_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="감독/출연"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="감독  "
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="윤종빈"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="출연  "
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/actor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="하정우(도치), 강동원(조윤)"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/black_box" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="한줄평"
                android:textSize="20dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/jacksung"
                android:layout_toLeftOf="@+id/jacksung"
                android:src="@drawable/ic_review_selected" />

            <Button
                android:id="@+id/jacksung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/background_light"
                android:text="작성하기"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <Button
            android:id="@+id/show_all"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/purple_box"
            android:text="모두 보기"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/black_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_facebook"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_kakao"
                android:layout_marginLeft="7dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_dark"
                android:text="예매하기"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>